force-app/main/default/objects/Lead/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( LeadSource, 
&quot;Website&quot;,&quot;0151t0000006bbJ&amp;oid=&quot;&amp;$Organization.Id,
&quot;Social Media&quot;, &quot;0151t0000006bbK&amp;oid=&quot;&amp;$Organization.Id,
&quot;Marketing Event&quot;, &quot;0151t0000006bbL&amp;oid=&quot;&amp;$Organization.Id,
&quot;Referral&quot;,&quot;0151t0000006bbM&amp;oid=&quot;&amp;$Organization.Id,
&quot;Cold Call&quot;,&quot;0151t0000006bbN&amp;oid=&quot;&amp;$Organization.Id,
&quot;Data.com&quot;, &quot;0151t0000006bbO&amp;oid=&quot;&amp;$Organization.Id,
&quot;Community&quot;, &quot;0151t0000006bbP&amp;oid=&quot;&amp;$Organization.Id,
&quot;Inbound Call&quot;,&quot;0151t0000006bbQ&amp;oid=&quot;&amp;$Organization.Id,
&quot;Partner&quot;,&quot;0151t0000006bbR&amp;oid=&quot;&amp;$Organization.Id,
&quot;0151t0000006bbJ&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>