force-app/main/default/objects/Lead/fields/td_date_requested__c.field-meta.xml
<CustomField>
    <fullName>td_date_requested__c</fullName>
    <label>td date requested</label>
    <type>DateTime</type>
</CustomField>