force-app/main/default/objects/Lead/fields/test_drive__c.field-meta.xml
<CustomField>
    <fullName>test_drive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test drive</label>
    <type>Checkbox</type>
</CustomField>