force-app/main/default/objects/Lead/listViews/Autoforce.listView-meta.xml
<ListView>
    <fullName>Autoforce</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>td_date_requested__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>test_drive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Autoforce</label>
</ListView>